更改图片位置

--- a/1.Fabric使用Raft共识多机部署方式.MD
+++ b/1.Fabric使用Raft共识多机部署方式.MD
@@ -43,7 +43,7 @@ sudo chmod +x /usr/local/bin/docker-compose
 # 2. 搭建方法
 ## 2.1 简介
 采用2台机器，使用5个orderer做Raft共识，3个部署在host1(192.168.121.63)，2个部署在host2(192.168.121.84)上，设置2个组织，分别拥有2个peer，各自部署在不同的host上，每台host配置一个cli作为管理工具，整体节点分布如下图：
-[![1.png](./Fabric_Multi_Orderer.png)]
+[![1.png](./assets/Fabric_Multi_Orderer.png)]
 ## 2.2 网络准备（关键步骤）
 由于节点是部署在不同的主机上的，而Fabric的组件是以docker形式启动的，组件之间不能直接通过网络发现各自的存在，需要使用docker构建overlay网络实现组件间的通信
 
