Update 2.基于Fabric Node SDK调用智能合约(Fabric 1.4.6).MD

--- a/2.基于Fabric Node SDK调用智能合约(Fabric 1.4.6).MD
+++ b/2.基于Fabric Node SDK调用智能合约(Fabric 1.4.6).MD
@@ -1,5 +1,5 @@
 # 1. Node环境准备
-使用nvm工具可以很方便的安装nodejs的任意版本，网络没问题的同学就直接去官方安装(文档编辑的时候是0.35.3版，可以访问`https://github.com/nvm-sh/nvm`查看最新版本以及使用方式，本文最后也会提供下载好的安装脚本)：
+使用nvm工具可以很方便的安装nodejs的任意版本，网络没问题的同学就直接去官方安装(文档编辑的时候是0.35.3版，可以访问`https://github.com/nvm-sh/nvm`查看最新版本以及使用方式)：
 ```
 curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
 ```
