更新docker-compose文件的内容：first-network -> multinode

--- a/1.Fabric使用Raft共识多机部署方式.MD
+++ b/1.Fabric使用Raft共识多机部署方式.MD
@@ -85,7 +85,7 @@ volumes:
 networks:
   byfn:
     external:
-      name: first-network
+      name: multinode
 
 services:
 
@@ -176,7 +176,7 @@ volumes:
 networks:
   byfn:
     external:
-      name: first-network
+      name: multinode
 
 services:
 
